--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,6 @@
 ---
 layout: default 
-title: Contact
+title: Get in Touch with The Bali Villa - Your Questions, Our Answers
 background-position: bg-[position:36%_50%] sm:bg-[position:50%_50%]
 banner-image: /images/villa-24.png
 heading: Booking Enquiry
@@ -8,8 +8,13 @@ pre-heading: Contact us today to make a
 text-image: /images/villa-2.png
 mirrored-text-image: /images/villa-3.png
 seo:
-  title: The Bali Villa
-  description: Experience Ultimate Luxury in Our Private Bali Villa. Book Now for an Unforgettable Getaway. Spacious 3-Bedroom, 3-Bathroom Villa with Complete Privacy.
+  title: Contact The Bali Villa | Luxury Bali Accommodations - Reach Out Today
+  description: Contact The Bali Villa and get in touch with our team. Your questions, our answers. We're here to assist you with all your inquiries about our luxury Bali accommodations. Reach out today and start planning your dream getaway.
+  keywords:
+  - bali villa inquiries
+  - villa reservation
+  - bali accommodation questions
+  social_image: /images/villa-25.png
   hide-from-google: false
 ---
 
