--- a/index.html
+++ b/index.html
@@ -1,14 +1,21 @@
 ---
 layout: default 
-title: Discover Your Bali Luxury. Unforgettable Villas, Secluded Paradise.
+title: Welcome to The Bali Villa - Your Private Oasis in Paradise
 background-position: bg-[position:23%_50%] sm:bg-[position:18%_50%]
 banner-image: /images/villa-1.png
 heading: The Bali Villa
 pre-heading: Welcome to
 mirrored-text-image: /images/villa-3-small.png
 seo:
-  title: The Bali Villa
-  description: Experience Ultimate Luxury in Our Private Bali Villa. Book Now for an Unforgettable Getaway. Spacious 3-Bedroom, 3-Bathroom Villa with Complete Privacy.
+  title: Luxury Bali Villas | The Bali Villa - Your Private Paradise Getaway
+  description: Discover unrivaled luxury at The Bali Villa. Your private paradise in Bali awaits, with exclusive villas set in serene surroundings. Immerse yourself in opulence and tranquility. Book your dream getaway now.
+  keywords: 
+  - luxury bali villas
+  - exclusive accommodations
+  - bali villa rentals
+  - vacation in bali
+  - luxury travel destinations
+  social_image: /images/villa-2-small.png
   hide-from-google: true
 ---
 
