--- a/rooms.html
+++ b/rooms.html
@@ -1,6 +1,6 @@
 ---
 layout: default 
-title: Rooms
+title: Our Luxurious Villa Rooms - Elegance and Comfort Combined
 background-position: bg-[position:25%_50%] md:bg-[position:73%_50%] 
 banner-image: /images/plant-flip.png
 heading: Rooms
@@ -9,9 +9,21 @@ text-image: /images/villa-2.png
 text-alignment: text-center sm:text-right
 mirrored-text-image: /images/villa-3.png
 seo:
-  title: The Bali Villa
-  description: Experience Ultimate Luxury in Our Private Bali Villa. Book Now for an Unforgettable Getaway. Spacious 3-Bedroom, 3-Bathroom Villa with Complete Privacy.
-  hide-from-google: false
+  title: Luxury Villa Rooms in Bali | The Bali Villa - Your Exclusive Getaway
+  description: Explore our luxurious villa rooms in Bali, where elegance and comfort combine to offer an unforgettable escape. Experience the pinnacle of opulence in our exclusive accommodations. Your private paradise in Bali awaits.
+  keywords:
+  - luxury villa rooms
+  - elegant accommodations
+  - comfortable suites
+  - exclusive villa stays
+  - bali accommodation
+  - opulent room rentals
+  - luxurious getaways
+  - villa suite options
+  - room reservations
+  - bali vacation rooms 
+  social_image: /images/villa-17-small.png
+  hide-from-google: true
 ---
 
 <!--------Room 1------------->
