--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ seo:
 		<div class="pt-15p pb-5p sm:py-15p sm:px-8">
 			
 			<div class="hidden sm:block">
-				<h2 class="editable p-8 text-center text-3xl md:text-5xl -ml-[20%] max-w-sm bg-[#d8d9db]"> Welcome <br> to the epitome of luxury in Bali. </h2>
+				<h2 class="editable p-8 text-center text-3xl md:text-5xl -ml-[20%] bg-[#d8d9db]"> Welcome <br> to the epitome of luxury in Bali. </h2>
 			</div>
 
 			<div class="editable">
