--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@ seo:
                     <h3 class="text-3xl text-center font-sans uppercase"> Contact us for enquiries and bookings below. </h3>
                 </div>
                 
-                <form>
+                <form class="netlify">
 
                     <input 
                         type="text" name="name" id="name" placeholder="Name" aria-label="Name"
