--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ seo:
   - vacation in bali
   - luxury travel destinations
   social_image: /images/villa-2-small.png
-  hide-from-google: true
+  hide-from-google: false
 ---
 
 <!--------Text Section------------->
