--- a/rooms.html
+++ b/rooms.html
@@ -23,7 +23,7 @@ seo:
   - room reservations
   - bali vacation rooms 
   social_image: /images/villa-17-small.png
-  hide-from-google: true
+  hide-from-google: false
 ---
 
 <!--------Room 1------------->
